--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "pg": "^8.8.0",
@@ -43,5 +44,4 @@
     "eslint-plugin-react": "^7.31.10",
     "nodemon": "^2.0.20"
   }
-  
 }
