--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
